# zed-laravel

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MEMORY.md  README.md  build.sh  extension.toml  install.sh
.zed/: settings.json
laravel-lsp/: Cargo.toml  build.rs
laravel-lsp/queries/: blade.scm  php.scm
laravel-lsp/src/: blade_directive_tokens.rs  blade_embedded_php.rs  blade_loops.rs  blade_php_block.rs  blade_props.rs  blade_var_rename.rs  cache_manager.rs  class_hierarchy_index.rs  class_locator.rs  class_rename.rs  code_lens.rs  column_rename.rs  command_call_locator.rs  command_disk_cache.rs  command_index.rs  command_signature.rs  completion_format.rs  component_completion.rs  component_declaration_locator.rs  composer_autoload.rs  config.rs  config_key_locator.rs  config_lookup.rs  database.rs  document_symbols.rs  env_key_locator.rs  file_watcher.rs  hover.rs  indexing_progress.rs  laravel_introspector.rs  lib.rs  livewire_config.rs  livewire_declaration_locator.rs  livewire_resolver.rs  livewire_version.rs  magic_dependency_index.rs  magic_disk_cache.rs  main.rs  member_resolver.rs  method_name_completion.rs  (+30 more)
laravel-lsp/src/blade_directive_tokens/: tests.rs
laravel-lsp/src/blade_embedded_php/: tests.rs
laravel-lsp/src/blade_props/: tests.rs
laravel-lsp/src/blade_var_rename/: tests.rs
laravel-lsp/src/cache_manager/: tests.rs
laravel-lsp/src/class_hierarchy_index/: tests.rs
laravel-lsp/src/class_rename/: tests.rs
laravel-lsp/src/code_lens/: tests.rs
laravel-lsp/src/column_rename/: tests.rs
laravel-lsp/src/command_call_locator/: tests.rs
laravel-lsp/src/command_disk_cache/: tests.rs
laravel-lsp/src/command_index/: tests.rs
laravel-lsp/src/command_signature/: tests.rs
laravel-lsp/src/completion_format/: tests.rs
laravel-lsp/src/component_completion/: tests.rs
laravel-lsp/src/component_declaration_locator/: tests.rs
laravel-lsp/src/composer_autoload/: tests.rs
laravel-lsp/src/config/: tests.rs
laravel-lsp/src/config_key_locator/: tests.rs
laravel-lsp/src/config_lookup/: tests.rs
laravel-lsp/src/database/: tests.rs
laravel-lsp/src/document_symbols/: tests.rs
laravel-lsp/src/env_key_locator/: tests.rs
laravel-lsp/src/file_watcher/: tests.rs
laravel-lsp/src/hover/: tests.rs
laravel-lsp/src/laravel_introspector/: builder_index.rs  chain.rs  model_metadata.rs  walker.rs
laravel-lsp/src/livewire_config/: tests.rs
laravel-lsp/src/livewire_declaration_locator/: tests.rs
laravel-lsp/src/livewire_resolver/: tests.rs
laravel-lsp/src/livewire_version/: tests.rs
laravel-lsp/src/magic_dependency_index/: tests.rs
laravel-lsp/src/member_resolver/: tests.rs
laravel-lsp/src/method_name_completion/: tests.rs  vendor_parser.rs
laravel-lsp/src/middleware_binding_locator/: tests.rs
laravel-lsp/src/middleware_parser/: tests.rs
laravel-lsp/src/migration_index/: tests.rs
laravel-lsp/src/model_analyzer/: tests.rs
laravel-lsp/src/naming/: tests.rs
laravel-lsp/src/parser/: tests.rs
laravel-lsp/src/pattern_disk_cache/: tests.rs
laravel-lsp/src/pattern_indexer/: tests.rs
laravel-lsp/src/php_outline/: tests.rs
laravel-lsp/src/php_variable_rename/: tests.rs
laravel-lsp/src/query_chain/: chain.rs  code_actions.rs  cursor.rs  diagnostics.rs  eloquent_completion.rs  extractor.rs  flow.rs  methods.rs  use_aliases.rs  var_type.rs
laravel-lsp/src/references/: tests.rs
laravel-lsp/src/rename/: tests.rs
laravel-lsp/src/route_discovery/: tests.rs
laravel-lsp/src/route_name_locator/: tests.rs
laravel-lsp/src/route_outline/: tests.rs
laravel-lsp/tests/: blade_pattern_extraction.rs  call_site_variants.rs  column_positions.rs  extraction_performance.rs  feature_pattern_extraction.rs  integration_tests.rs  middleware_extraction.rs  php_pattern_extraction.rs
(+82 files in other folders)
