[package]
name = "laravel-lsp"
version = "0.1.17"
edition = "2021"
authors = ["Mike"]
description = "Language Server Protocol implementation for Laravel development"
license = "MIT"

[dependencies]
# LSP framework
tower-lsp = "0.20"
lsp-types = "0.94"

# Salsa incremental computation
salsa = "0.26"

# Async runtime
tokio = { version = "1.52", features = ["full"] }

# LRU cache for memory management
lru = "0.18"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File system and paths
walkdir = "2.5"
glob = "0.3"
directories = "6"  # Cross-platform XDG cache directories

# Regex for pattern matching
regex = "1.12"
lazy_static = "1.5"
once_cell = "1.21"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Database connectivity for exists:/unique: validation rules
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql", "postgres", "sqlite"], default-features = false }
tiberius = { version = "0.12", default-features = false, features = ["tokio", "rustls"] }
tokio-util = { version = "0.7", features = ["compat"] }

# Tree-sitter parsers
# Using latest version to match the Blade grammar from GitHub
tree-sitter = "0.26"
tree-sitter-php = "0.24"

# Additional dependencies for Salsa integration
arc-swap = "1.9"

[build-dependencies]
# For downloading grammar from GitHub
ureq = "3"

# For extracting tar.gz archives
flate2 = "1.1"
tar = "0.4"

# For compiling C code
cc = "1.2"

[dev-dependencies]
tempfile = "3.27"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = true
